# kakeidoscope

./: .build.yml  .gitignore  .gitmodules  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.dwm  README.md  flake.nix  rustfmt.toml
rc/: kakeidoscope.kak
src/: Makefile  cli.rs  config.def.h  config.mk  error.rs  kakeidoscope.c  main.rs  matching-brackets.c  matching-brackets.h  util.c  util.h
test/: mem  mktests  runtime
time/: .gitignore  runtime
